# shogen

./: .env.example  .gitignore  README.md  docker-compose.yml  test_output.txt
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml  test_azure.py
backend/app/: __init__.py  main.py
backend/app/ai/: __init__.py  prompts.py  provider.py
backend/app/api/: __init__.py  errors.py  routes_campaigns.py  routes_demo.py  routes_health.py
backend/app/core/: __init__.py  config.py  logging.py
backend/app/db/: __init__.py  base.py  models.py  session.py
backend/app/db/migrations/: README  env.py
backend/app/db/migrations/versions/: 20260621_01_initial_schema.py
backend/app/demo/: __init__.py  golden_replay_fintech.json
backend/app/policy/: __init__.py  engine.py  rules.json
backend/app/repositories/: __init__.py  campaigns.py
backend/app/schemas/: __init__.py  brief.py  campaigns.py  creative.py  demo.py  evaluation.py  events.py  journey.py  review.py  strategy.py
backend/app/services/: __init__.py  campaigns.py  deployment.py  evaluation.py  events.py  generation.py  replay.py  review.py  workflows.py
backend/app/workflow/: __init__.py  graph.py  state.py
backend/tests/: test_campaign_api.py  test_campaign_models.py  test_evaluation.py  test_health.py  test_model_provider.py  test_policy_engine.py
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo
frontend/src/: App.tsx  main.tsx  types.ts
frontend/src/api/: adapt.ts  client.ts  events.ts
frontend/src/data/: demo.ts
(+17 files in other folders)
