[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shogen-backend"
version = "0.1.0"
description = "FastAPI backend for the Shogen campaign control room."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.16,<2.0",
    "fastapi>=0.116,<1.0",
    "langgraph>=0.2,<1.0",
    "pydantic-settings>=2.10,<3.0",
    "psycopg[binary]>=3.2,<4.0",
    "python-json-logger>=2.0,<4.0",
    "sqlalchemy>=2.0,<3.0",
    "uvicorn[standard]>=0.35,<1.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28,<1.0",
    "pytest>=8.4,<9.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
